Added user profile endpoints. Restructured the directory for better code readability
