# src/Routers/routes.js
@@ -1,5 +1,6 @@
 import express from "express";
-import { getAll, get, create, removeOne, update, getAuth } from "./controller.js";
+import { getAll, get, create, removeOne, update, getAuth } from "../Controllers/controller.js";
+import { ProfileRouter } from "./ProfileRouter.js";
 
 const router = express.Router();
 
@@ -15,5 +16,7 @@ router.patch("/user/:id", update);
 
 //Currently empties database, will change to only delete one user when done
 router.delete("/", removeOne);
+
+router.use("/profile", ProfileRouter);
 
 export default router;
